[workspace]
resolver = "2"
members = [
    "lib-core",
    "bin-app",
    "build-scripts",
]

# Workspace-wide dependency management
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Workspace-wide package metadata
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rust Examples"]
license = "MIT"

# Custom build profiles
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Custom profile for faster development builds
[profile.fast-dev]
inherits = "dev"
opt-level = 1

# Custom profile for profiling
[profile.profiling]
inherits = "release"
debug = true
strip = false
