[package]
name = "lib-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
# Default features enabled unless --no-default-features is used
default = ["json"]

# JSON serialization support
json = ["dep:serde", "dep:serde_json"]

# Extra utilities (conditional compilation)
extra = []

# Advanced features
advanced = ["extra"]

[dependencies]
# Workspace dependencies
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
